# HPGECalorimeter

./: .gitignore  208Tl.xlsx  Analysis.ipynb  Appendix.xlsx  Efficiency.ipynb  Measurement data.ipynb  Measurement.xlsx  README.md  Thesis_presentation_Bogye_Balazs.pptx  U_238.txt  coincidence_correction.ipynb  fitting.ipynb  run.py  run.sh  settings.json  source_geant.sh  version_manager.py
data/100keV_QBBC/: B4_nt_B4_t0.csv  B4_nt_B4_t1.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv
data/100keV_livermore/: B4_nt_B4_t0.csv  B4_nt_B4_t1.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv
data/100keV_penelope/: B4_nt_B4_t0.csv  B4_nt_B4_t1.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv
data/1MeV_air/: B4_nt_B4_t0.csv  B4_nt_B4_t1.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv
data/1MeV_cylinder_QBBC/: B4_nt_B4_t0.csv  B4_nt_B4_t1.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv
data/1MeV_cylinder_penelope/: B4_nt_B4.csv  B4_nt_B4_t0.csv  B4_nt_B4_t1.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv
data/1MeV_gamma_into_100cm_Ge_box/: B4_nt_B4_t0.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv
data/1MeV_gamma_into_10cm_Ge_box/: B4_nt_B4_t1.csv
data/1MeV_nophotoeffect_penelope/: B4_nt_B4_t0.csv  B4_nt_B4_t1.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv
data/512keV_gamma_into_10cm_Ge_box/: B4_h1_Eabs.csv  B4_nt_B4_t0.csv  B4_nt_B4_t3.csv
data/data_table_real_geom_big/: run_iso.mac
data/decay_U238/: B4_nt_B4_t0.csv  B4_nt_B4_t1.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv
data/real_geom_monoenergetic_500keV_5cm/: run_iso.mac
data/real_geom_simdecay_sample_5cm/: B4_nt_B4_t0.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv  B4_nt_B4_t4.csv  B4_nt_B4_t5.csv  B4_nt_B4_t6.csv
data/uranium_table_real_geom/: B4_nt_B4_t0.csv  B4_nt_B4_t1.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv
data/uranium_table_simple_detector/: B4_nt_B4_t0.csv  B4_nt_B4_t1.csv  B4_nt_B4_t2.csv  B4_nt_B4_t3.csv  primary_energies.txt
macros/: empty_uranium_gamma_energies.mac  run_5cm_simdecay.mac  run_dist_helper.mac  run_dist_helper_simdecay.mac  run_dists.mac  run_dists_simdecay.mac  run_mono_energies over_distances.mac  run_mono_energies.mac  run_mono_helper.mac
macros/old/: run_iso.mac  run_no_photoeffect.mac
source/: CMakeCache.txt  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  cmake_install.cmake  exampleB4a.cc  hpge.cc
source/include/: B4DetectorConstruction.hh  B4PrimaryGeneratorAction.hh  B4aActionInitialization.hh  B4aEventAction.hh  B4aSteppingAction.hh  DataLogger.hh  DetectorGeometry.hh  PhotonLoggingStackingAction.hh  SettingsReader.hh
source/src/: B4DetectorConstruction.cc  B4PrimaryGeneratorAction.cc  B4RunAction.cc  B4aActionInitialization.cc  B4aEventAction.cc  B4aSteppingAction.cc  DataLogger.cc  DetectorGeometry.cc  PhotonLoggingStackingAction.cc  SettingsReader.cc
(+1081 files in other folders)
